# ZZHCodes

./: .gitignore  startup.m
Ephys/: AlignBehToEphys.m  AlignBehToEphysBit.m  CompleteEvents.m  ComputePlotPSTH.m  ExamineTaskResponsive.m  KilosortOutputClass.m  PopulationActivity.m  SRTSpikes.m  SRTSpikesPopulation.m  SRTSpikes_test.mlx  cal_soft_norm.m  clusterSpikes.m  clusterSpikes_test.mlx  computeAutoCorr.m  decodeBitMarker.m  downsample_sdf.m  gaussian_kernel.m  getEphysTable.m  getSpikeCount.m  getSpikeTimingsWithin.m  getUnitLocation.m  get_mean_waveform.m  jpsth.m  mpsth.m  plot_adjacent_waveforms.m  sdf.m  sdf25.m  sdf26.m  sdf26_half_gaussian.m  seePixels.m  seePixelsGPS.m  spikeLocation.m  spike_features.m  test_rnn.m  warp_sdf.m  warp_sdf_pop.m  warp_sdf_port.m
Ephys/dPCA/python/: pyproject.toml  setup.py
Ephys/dPCA/python/dPCA/: dPCA.py
GPS/: GPSBehClass.m  GPSBehProgressClass.asv  GPSBehProgressClass.m  GPSBehSessionClass.m  GPSColor.m  GPSGroupClass.m  GPSPlot.asv  GPSPlot.m  GPSProgressClass.m  GPSProgressKbClass.m  GPSSessionClass.m  GPSSessionKbClass.asv  GPSSessionKbClass.m  MazeDiagram.mlx  genGPSBehProgressClass.m  genGPSBehSessionClass.asv  genGPSBehSessionClass.m  genGPSProgressClass.m  genGPSProgressKbClass.asv  genGPSProgressKbClass.m  genGPSProgressSRTClass.m  genGPSSessionClass.m  genGPSSessionKbClass.m  sortBpodFiles.m
General/: BH_method.m  calDur.m  cal_auc_batch.m  customcolormap_preset_z.m  dxdt_griffinLab.m  gen_rand_fp.m  get_folders.m  get_mat_files.m  plotshaded.m  resizeColormap.m  rmoutliers_custome.m  rmoutliers_tail.m  (+3 more)
(+364 files in other folders)
